--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PizzaApp</string>
+    <string name="menu_margeritha">\n\tMargeritha\n\t(Tomatensauce, Mozarella, Basilikum)\n</string>
+    <string name="menu_prosciutto">&#160;Prosciutto<br/>&#160;(Schinken, Käse)</string>
+    <string name="menu_salami">\n\tSalami\n\t(Salami, Käse)\n</string>
 </resources>
